<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Emoji</string>
    <string name="variant_group_title">Emoji Variant</string>
    <string name="variant_ios_title">Ios</string>
    <string name="variant_google_title">Google</string>
    <string name="variant_google_compat_title">GoogleCompat</string>
    <string name="variant_twitter_title">Twitter</string>
    <string name="variant_emojione_title">EmojiOne</string>
    <string name="show_dialog_title">Show Dialog</string>
</resources>
